<resources>
    <string name="app_name">MVVM-Android</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Retrofit</string>
    <string name="nav_header_subtitle">RESTful Web Services</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_get">Get</string>
    <string name="menu_post">Post</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_query">Query</string>
    <string name="menu_put">Put</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_request">ট্রিপ রিকোয়েস্ট</string>
    <string name="cars">গাড়িসমূহ</string>
    <string name="waiting_bid">অপেক্ষামান বিড</string>
    <string name="trip_details">ট্রিপের বিবরণ</string>
</resources>